Show scrollbar by default in editor. This prevents jumpyness when page loads and text is loaded from localStorage.

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -210,6 +210,8 @@ a {
 	line-height: 2rem;
 	font-family: 'Roboto Slab', serif;
 	font-weight: 100;
+	overflow: scroll;
+	overflow-x: hidden;
 	@include transition-duration($global-transition-duration);
 
 	.has-started & {
